# automatic-meme

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL_test.cpp  SFML_test.cpp  config.h.in  gui-test.xml  gui-test2.xml  gui2.xml  plan.txt
UI/: AllControls.hpp  BasicImage.cpp  BasicImage.hpp  Border.hpp  Color.cpp  Color.hpp  ColorString.cpp  ColorString.hpp  Control.cpp  Control.hpp  Cursor.cpp  Cursor.hpp  Effect.hpp  File.cpp  File.hpp  Font.cpp  Font.hpp  Gui.cpp  Gui.hpp  Image.cpp  Image.hpp  Layout.cpp  Layout.hpp  Resource.hpp  Sound.cpp  Sound.hpp  TiledFont.cpp  TiledFont.hpp  TiledImage.cpp  TiledImage.hpp  Widget.cpp  Widget.hpp  XmlLoader.cpp  XmlLoader.hpp  common.cpp  common.hpp  generate_links.sh
UI/backend/: Backend.hpp  Input.hpp  Screen.cpp  Screen.hpp  Speaker.cpp  Speaker.hpp  System.hpp
UI/backend/SDL/: SDLBackend.cpp  SDLBackend.hpp  SDLScreen.cpp  SDLScreen.hpp  SDLSound.cpp  SDLSound.hpp  SDLSpeaker.cpp  SDLSpeaker.hpp  SDLSystem.cpp  SDLSystem.hpp  SDL_Surface_Image.cpp  SDL_Surface_Image.hpp  SDL_TTF_Font.cpp  SDL_TTF_Font.hpp
UI/backend/drivers/: SoundLibSnd.cpp  SoundLibSnd.hpp
UI/backends/SDL2/: Backend.cpp  Backend.hpp  RWOpsFromFile.cpp  RWOpsFromFile.hpp  SDLOpenGLScreen.cpp  SDLOpenGLScreen.hpp  SDLScreen.cpp  SDLScreen.hpp  SDLSound.cpp  SDLSound.hpp  SDLSpeaker.hpp  SDLSystem.cpp  SDLSystem.hpp  SDL_Surface_Image.cpp  SDL_Surface_Image.hpp  SDL_TTF_Font.cpp  SDL_TTF_Font.hpp
UI/backends/default/: Backend.hpp
UI/backends/generic/: Backend.cpp  Backend.hpp  Font.cpp  Font.hpp  FontImage.hpp  Screen.cpp  Screen.hpp  Speaker.hpp  System.cpp  System.hpp
UI/backends/win32/: Backend.cpp  Backend.hpp  Font.cpp  Font.hpp  FontImage.hpp  Screen.cpp  Screen.hpp  Speaker.cpp  Speaker.hpp  System.cpp  System.hpp  priv.hpp
UI/backends/xcb/: Backend.cpp  Backend.hpp  Screen.cpp  Screen.hpp  Speaker.cpp  Speaker.hpp  System.hpp  priv.hpp
UI/backends/xlib/: Backend.cpp  Backend.hpp  Font.cpp  Font.hpp  FontImage.hpp  Screen.cpp  Screen.hpp  Speaker.cpp  Speaker.hpp  System.cpp  System.hpp  priv.hpp
UI/common/: Colors.cpp  Colors.hpp  Colorstring.cpp  Colorstring.hpp  ControlManager.cpp  ControlManager.hpp  Cursor.cpp  Cursor.hpp  Cursor_resources.hpp  Cursors.cpp  Cursors.hpp  Fonts.cpp  Fonts.hpp  Texture.cpp  Texture.hpp  cache.cpp  cache.hpp  common.cpp  common.hpp  debug.cpp  debug.hpp
UI/common/SDL/: CSurface.cpp  CSurface.h  Drawing.cpp  Drawing.hpp
UI/common/SFML/: Drawing.cpp  Drawing.hpp
UI/controls/: Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  Container.cpp  Container.hpp  ContextMenu.cpp  ContextMenu.hpp  Dialog.cpp  Dialog.hpp  Form.hpp  Graph.cpp  Graph.hpp  GridContainer.cpp  GridContainer.hpp  Label.cpp  Label.hpp  ListBox.cpp  ListBox.hpp  Menu.cpp  Menu.hpp  ProgressBar.cpp  ProgressBar.hpp  RadioButton.cpp  RadioButton.hpp  ScrollBar.cpp  ScrollBar.hpp  TabContainer.cpp  TabContainer.hpp  Terminal.cpp  Terminal.hpp  TextBox.cpp  TextBox.hpp  TrackBar.cpp  TrackBar.hpp  WidgetMover.cpp  (+3 more)
UI/controls/SDL/: Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  Container.cpp  Container.hpp  Dialog.cpp  Dialog.hpp  GridContainer.cpp  GridContainer.hpp  Label.cpp  Label.hpp  ListBox.cpp  ListBox.hpp  ProgressBar.cpp  ProgressBar.hpp  RadioButton.cpp  RadioButton.hpp  ScrollBar.cpp  ScrollBar.hpp  TabContainer.cpp  TabContainer.hpp  TabContainerInc.hpp  Terminal.cpp  Terminal.hpp  TextBox.cpp  TextBox.hpp  TrackBar.cpp  TrackBar.hpp  WidgetMover.cpp  WidgetMover.hpp  WidgetResizer.cpp  WidgetResizer.hpp
UI/controls/SFML/: Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  Container.cpp  Dialog.cpp  GridContainer.cpp  Label.cpp  Label.hpp  ListBox.cpp  ListBox.hpp  RadioButton.cpp  RadioButton.hpp  ScrollBar.cpp  TabContainer.hpp  Terminal.cpp  Terminal.hpp  TextBox.cpp  TextBox.hpp  TrackBar.cpp  TrackBar.hpp  WidgetMover.cpp  WidgetMover.hpp
UI/extensions/: Image_libbmp.cpp  Image_libbmp.hpp  Image_libpng.cpp  Image_libpng.hpp  SoundLibSnd.cpp  SoundLibSnd.hpp
UI/managers/: ControlManager.cpp  ControlManager.hpp  Effects.cpp  Effects.hpp  FileIFStream.hpp  Fonts.cpp  Fonts.hpp  Images.cpp  Images.hpp  ResourceManager.cpp  ResourceManager.hpp  Sounds.cpp  Sounds.hpp
data/: basic.xml  gui-basic.xml  gui-test.xml  rect_test.xml
gl/lin/: opengl_x11.c
gl/win/: freeglut-2.c  freeglut.c  simple_example.c  wingl.c
lib/: CircularIterator.hpp
lib/RapidXML/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
lib/bmpread/: bmpread.cpp  bmpread.h
tests/: basic.cpp  gui-test.cpp  test_opencv_camera.cpp
